--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "sqlite3": "^5.1.6",
-    "sqlite": "^4.1.1"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "sqlite": "^4.1.1",
+    "sqlite3": "^5.1.6"
   }
 }
-
